Closed Bug 371024 Opened 19 years ago Closed 18 years ago

Typos in NSS' error strings

Categories

(NSS :: Libraries, defect, P4)

3.11.5
x86
All
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.7

People

(Reporter: KaiE, Assigned: KaiE)

Details

Attachments

(1 file)

from bug 107491: >+SSL_ERROR_RX_UNEXPECTED_CLIENT_KEY_EXCH=SSL received an unexpected Cllient Key Exchange handshake message. Client Key Exchange >+SSL_ERROR_DECOMPRESSION_FAILURE_ALERT=SSL peer was unable to succesfully decompress an SSL record it received. successfully >+SEC_ERROR_UNRECOGNIZED_OID=Unrecognized Object IDentifier. Is this capitalization correct? >+SEC_ERROR_CRL_EXPIRED=The CRL for the certificate's issuer has expired. Update it or check your system data and time. date and time
Attached patch Patch v1Splinter Review
Proposed patch.
Attachment #255784 - Flags: superreview?(rrelyea)
Attachment #255784 - Flags: review?(nelson)
Comment on attachment 255784 [details] [diff] [review] Patch v1 r+ The new strings definately have less typos than the originals.
Attachment #255784 - Flags: superreview?(rrelyea) → superreview+
Comment on attachment 255784 [details] [diff] [review] Patch v1 One of these "typos" was deliberate. > ER3(SEC_ERROR_UNRECOGNIZED_OID, (SEC_ERROR_BASE + 143), >-"Unrecognized Object IDentifier.") >+"Unrecognized Object Identifier.") The original capitalization was chosen so that the capital letters would spell OID. But if people would really rather see normal English capitalization, I'm OK with that, too.
Attachment #255784 - Flags: review?(nelson) → review+
fixed on trunk. May I land these string fixes on NSS_3_11_BRANCH?
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Checking in SECerrs.h; /cvsroot/mozilla/security/nss/cmd/lib/SECerrs.h,v <-- SECerrs.h new revision: 1.13; previous revision: 1.12 done Checking in SSLerrs.h; /cvsroot/mozilla/security/nss/cmd/lib/SSLerrs.h,v <-- SSLerrs.h new revision: 1.6; previous revision: 1.5 done
Kai, yes you may land those string fixes on the branch. Whenever any NSS bug is resolved/FIXED, it MUST have a "target fix version" set, to show the first (lowest numbered) version of NSS will contain the fix. Fixes made on the trunk, but not on the branch the target fix version is 3.12. Fixes made on the 3_11_BRANCH should show the next upcoming 3.11.sx version, and that presently is 3.11.7. I'm marking this bug as having a target of 3.12, since you fixed it on the trunk. If you also fix in on the branch, please change the target accordingly. Also, it's good to set the priority on any bug you work on. A P1 bug is one that is so bad that we will make a release just to fix it! A P2 bug is one that is not a P1, but our employers actually care about. A P3 bug is one that someone wants fixed but our employers don't care about. P4 is for really trivial stuff like misspelled comments in source.
Target Milestone: --- → 3.12
checked in to 3.11 branch Checking in SECerrs.h; /cvsroot/mozilla/security/nss/cmd/lib/SECerrs.h,v <-- SECerrs.h new revision: 1.11.24.3; previous revision: 1.11.24.2 done Checking in SSLerrs.h; /cvsroot/mozilla/security/nss/cmd/lib/SSLerrs.h,v <-- SSLerrs.h new revision: 1.3.28.2; previous revision: 1.3.28.1 done
Priority: -- → P4
Target Milestone: 3.12 → 3.11.7
reopening to correct the assignee to reflect the name of the developer who fixed the bug.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee: nobody → kengert
Status: REOPENED → NEW
Marking fixed (again), by kengert
Status: NEW → RESOLVED
Closed: 19 years ago18 years ago
Resolution: --- → FIXED
Reopening to correct assignee.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Woops, Nelson beat me to it !
Status: REOPENED → RESOLVED
Closed: 18 years ago18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: