Bug 371024, Typos in NSS' error strings r=rrelyea, r=nelson